Ignore new warnings for now

--- a/docs/guides/qiskit-addons-mpf-get-started.ipynb
+++ b/docs/guides/qiskit-addons-mpf-get-started.ipynb
@@ -157,7 +157,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d2f308be-2c13-475c-b9a7-390883a620bc",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+        "ignore-warnings"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
