--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -56,7 +56,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "a846a845-7ac5-4c92-b124-d2b90a773ba2",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+        "ignore-warnings"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -97,6 +101,17 @@
     "    \"# Add a controlled-phase gate to the circuit 'qc'\"\n",
     "  ]}\n",
     "/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff50da63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.simplefilter('default', category=PendingDeprecationWarning)\n"
    ]
   },
   {
@@ -482,7 +497,7 @@
  "metadata": {
   "description": "Read more about out-of-the-box circuits provided by the Qiskit circuit library, including N-local, time-evolution and data-encoding circuits",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "test-pendingDeprecation",
    "language": "python",
    "name": "python3"
   },
@@ -496,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.11"
   },
   "title": "Circuit library"
  },
