--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -58,7 +58,7 @@
    "id": "a846a845-7ac5-4c92-b124-d2b90a773ba2",
    "metadata": {
     "tags": [
-        "ignore-warnings"
+     "ignore-warnings"
     ]
    },
    "outputs": [
@@ -111,7 +111,8 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.simplefilter('default', category=PendingDeprecationWarning)\n"
+    "\n",
+    "warnings.simplefilter(\"default\", category=PendingDeprecationWarning)"
    ]
   },
   {
@@ -497,7 +498,7 @@
  "metadata": {
   "description": "Read more about out-of-the-box circuits provided by the Qiskit circuit library, including N-local, time-evolution and data-encoding circuits",
   "kernelspec": {
-   "display_name": "test-pendingDeprecation",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3"
   },
   "title": "Circuit library"
  },
