replaced Frank's addition of Prac QC to index, qiskit_bot, and notebook checker

--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -9,4 +9,6 @@ This page is for open-source previews only.
 
 If you don't see your course in the following list, edit `learning/index.mdx` and restart the preview.
 
-* [Quantum machine learning](/learning/courses/quantum-machine-learning)
+- [Quantum machine learning](/learning/courses/quantum-machine-learning)
+
+- [Quantum computing in practice](/learning/courses/quantum-computing-in-practice)
