Edited description and title of each notebook in QML

--- a/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
+++ b/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
@@ -1701,6 +1701,8 @@
   }
  ],
  "metadata": {
+  "description": "An overview of data encoding methods in quantum machine learning. Encoding schemes covered include basis, amplitude, angle, and dense encoding.",
+  "title": "Data encoding",
   "kernelspec": {
    "display_name": "test_env",
    "language": "python",
