--- a/learning/courses/Quantum-machine-learning/Introduction.ipynb
+++ b/learning/courses/Quantum-machine-learning/Introduction.ipynb
@@ -352,6 +352,8 @@
   }
  ],
  "metadata": {
+  "description": "An introduction to quantum machine learning that sets expectations, describes the course structure, and gives an initial example.",
+  "title": "Introduction",
   "kernelspec": {
    "display_name": "test_env",
    "language": "python",
