--- a/learning/courses/Quantum-machine-learning/QVCs-QNNs.ipynb
+++ b/learning/courses/Quantum-machine-learning/QVCs-QNNs.ipynb
@@ -1989,6 +1989,8 @@
   }
  ],
  "metadata": {
+  "description": "Quantum variational circuits are applied to the recognition of patterns in an image. The parallels with classical neural networks are discussed.",
+  "title": "QVCs and QNNs",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
