--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "94d3f09d-324c-4eb3-a82a-3c88b9a11752",
    "metadata": {
     "tags": [
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "a41617e6-bc0b-48a9-9fe6-de7cfd84f9f6",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "004ea9de-413c-41d5-9208-a6981166f252",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "d10aeaee-c20f-421c-94d1-a1e829dcaab5",
    "metadata": {},
    "outputs": [],
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "a02aaca2-bca2-4531-b49a-3718a37de948",
    "metadata": {},
    "outputs": [],
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "a6d492b5-d86b-43cd-9171-4add0903fe84",
    "metadata": {},
    "outputs": [
@@ -1877,392 +1877,68 @@
      "text": [
       "\n",
       "Starting configuration recovery iteration 0\n",
-      "Batch 0 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 1 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 3 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 4 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 5 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 6 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 7 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 8 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 9 subspace dimension: 6400, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Batch 0 subspace dimension: 6400\n",
+      "Batch 1 subspace dimension: 6400\n",
+      "Batch 2 subspace dimension: 6400\n",
+      "Batch 3 subspace dimension: 6400\n",
+      "Batch 4 subspace dimension: 6400\n",
+      "Batch 5 subspace dimension: 6400\n",
+      "Batch 6 subspace dimension: 6400\n",
+      "Batch 7 subspace dimension: 6400\n",
+      "Batch 8 subspace dimension: 6400\n",
+      "Batch 9 subspace dimension: 6400\n",
       "\n",
       "\n",
-      "Starting configuration recovery iteration 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 subspace dimension: 240100, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 1 subspace dimension: 253009, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 subspace dimension: 243049, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 3 subspace dimension: 237169, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 4 subspace dimension: 229441, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 5 subspace dimension: 228484, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 6 subspace dimension: 233289, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 7 subspace dimension: 228484, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 8 subspace dimension: 253009, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 9 subspace dimension: 240100, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting configuration recovery iteration 1\n",
+      "Batch 0 subspace dimension: 240100\n",
+      "Batch 1 subspace dimension: 253009\n",
+      "Batch 2 subspace dimension: 243049\n",
+      "Batch 3 subspace dimension: 237169\n",
+      "Batch 4 subspace dimension: 229441\n",
+      "Batch 5 subspace dimension: 228484\n",
+      "Batch 6 subspace dimension: 233289\n",
+      "Batch 7 subspace dimension: 228484\n",
+      "Batch 8 subspace dimension: 253009\n",
+      "Batch 9 subspace dimension: 240100\n",
       "\n",
       "\n",
-      "Starting configuration recovery iteration 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 subspace dimension: 235225, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 1 subspace dimension: 248004, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 subspace dimension: 243049, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 3 subspace dimension: 248004, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 4 subspace dimension: 239121, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 5 subspace dimension: 234256, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 6 subspace dimension: 234256, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 7 subspace dimension: 245025, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 8 subspace dimension: 242064, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 9 subspace dimension: 233289, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting configuration recovery iteration 2\n",
+      "Batch 0 subspace dimension: 235225\n",
+      "Batch 1 subspace dimension: 248004\n",
+      "Batch 2 subspace dimension: 243049\n",
+      "Batch 3 subspace dimension: 248004\n",
+      "Batch 4 subspace dimension: 239121\n",
+      "Batch 5 subspace dimension: 234256\n",
+      "Batch 6 subspace dimension: 234256\n",
+      "Batch 7 subspace dimension: 245025\n",
+      "Batch 8 subspace dimension: 242064\n",
+      "Batch 9 subspace dimension: 233289\n",
       "\n",
       "\n",
-      "Starting configuration recovery iteration 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 subspace dimension: 225625, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 1 subspace dimension: 252004, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 subspace dimension: 231361, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 3 subspace dimension: 239121, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 4 subspace dimension: 242064, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 5 subspace dimension: 250000, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 6 subspace dimension: 239121, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 7 subspace dimension: 244036, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 8 subspace dimension: 247009, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 9 subspace dimension: 250000, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting configuration recovery iteration 3\n",
+      "Batch 0 subspace dimension: 225625\n",
+      "Batch 1 subspace dimension: 252004\n",
+      "Batch 2 subspace dimension: 231361\n",
+      "Batch 3 subspace dimension: 239121\n",
+      "Batch 4 subspace dimension: 242064\n",
+      "Batch 5 subspace dimension: 250000\n",
+      "Batch 6 subspace dimension: 239121\n",
+      "Batch 7 subspace dimension: 244036\n",
+      "Batch 8 subspace dimension: 247009\n",
+      "Batch 9 subspace dimension: 250000\n",
       "\n",
       "\n",
-      "Starting configuration recovery iteration 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 subspace dimension: 251001, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 1 subspace dimension: 245025, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 subspace dimension: 234256, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 3 subspace dimension: 235225, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 4 subspace dimension: 219024, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 5 subspace dimension: 224676, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 6 subspace dimension: 234256, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 7 subspace dimension: 240100, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 8 subspace dimension: 233289, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 9 subspace dimension: 250000, "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting configuration recovery iteration 4\n",
+      "Batch 0 subspace dimension: 251001\n",
+      "Batch 1 subspace dimension: 245025\n",
+      "Batch 2 subspace dimension: 234256\n",
+      "Batch 3 subspace dimension: 235225\n",
+      "Batch 4 subspace dimension: 219024\n",
+      "Batch 5 subspace dimension: 224676\n",
+      "Batch 6 subspace dimension: 234256\n",
+      "Batch 7 subspace dimension: 240100\n",
+      "Batch 8 subspace dimension: 233289\n",
+      "Batch 9 subspace dimension: 250000\n",
       "\n"
      ]
     }
@@ -2312,10 +1988,7 @@
     "    coeffs = []\n",
     "    for j in range(NUM_BATCHES):\n",
     "        strs_a, strs_b = bitstring_matrix_to_ci_strs(batches[j])\n",
-    "        print(\n",
-    "            f\"Batch {j} subspace dimension: {len(strs_a) * len(strs_b)},\",\n",
-    "            end=\" \",\n",
-    "        )\n",
+    "        print(f\"Batch {j} subspace dimension: {len(strs_a) * len(strs_b)}\")\n",
     "        energy_sci, coeffs_sci, avg_occs, spin = solve_fermion(\n",
     "            batches[j],\n",
     "            core_hamiltonian,\n",
