--- a/learning/courses/Quantum-machine-learning/Quantum-Kernel-methods.ipynb
+++ b/learning/courses/Quantum-machine-learning/Quantum-Kernel-methods.ipynb
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "description": "Quantum kernels are used initially to determine a kernel matrix element, then the method is applied to a full kernel matrix and the interface with classical kernel tools is presented.",
+  "description": "Quantum kernels are used initially to determine a kernel matrix element, a full kernel matrix and the interface with classical kernel tools is presented.",
   "title": "Quantum kernel methods",
   "kernelspec": {
    "display_name": "Python 3",
