--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -1,16 +1,16 @@
 ---
 title: Tutorials
-description: Browse tutorials on utility-scale workflows or Qiskit capabilities, and learn how to use Qiskit for common use cases.
+description: Browse tutorials on workflows toward advantage or Qiskit capabilities, and learn how to use Qiskit for common use cases.
 ---
 
 # Tutorials
 
 Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. 
-- The section on workflows toward utility contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
+- The section on workflows toward advantage contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
 - The section on Qiskit capabilities contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
 
 
-## Explore workflows toward utility
+## Explore workflows toward advantage
 
 Tutorials in this section cover large scale demonstrations of quantum algorithms.
 
