Fixed sp errors and added words to ignore to QVCs QNNs

--- a/learning/courses/Quantum-machine-learning/QVCs-QNNs.ipynb
+++ b/learning/courses/Quantum-machine-learning/QVCs-QNNs.ipynb
@@ -5,7 +5,7 @@
    "id": "c458cae8-4c92-46f8-b914-49fc03920c01",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore linesize imshow minpos nonumber zzcircuit zcircuit pcircuit zzcx Schuld Francesco Peruccione Vojtech Adrian Perez Cervera Lierta Elies Fuster Jose Latorre Sweke Jakob */}\n",
+    "{/* cspell:ignore linesize, imshow, minpos, nonumber, zzcircuit, zcircuit, pcircuit, zzcx, Schuld, Francesco, Peruccione, Vojtech, Adrian, Perez, Cervera, Lierta, Elies, Fuster, Jose, Latorre, Sweke, Jakob */}\n",
     "\n",
     "# Quantum Variational Circuits & Quantum Neural Networks\n",
     "\n",
