--- a/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
+++ b/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
@@ -5,6 +5,8 @@
    "id": "0210ee7c-f989-4eb0-9231-ae5deacb6091",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore backgroundcolorlinesize, imshow, minpos, nonumber, zzcircuit, zcircuit, pcircuit, zzcx, Schuld, Francesco, Petruccione, Vojtech, Adrian, Perez, Cervera, Lierta, Elies, Fuster, Jose, Latorre, Sweke, Jakob */}\n",
+    "\n",
     "# Data encoding\n",
     "\n",
     "## Introduction and notation\n",
@@ -1702,7 +1704,6 @@
  ],
  "metadata": {
   "description": "An overview of data encoding methods in quantum machine learning. Encoding schemes covered include basis, amplitude, angle, and dense encoding.",
-  "title": "Data encoding",
   "kernelspec": {
    "display_name": "test_env",
    "language": "python",
@@ -1719,7 +1720,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  }
+  },
+  "title": "Data encoding"
  },
  "nbformat": 4,
  "nbformat_minor": 4
