--- a/learning/courses/Quantum-machine-learning/Introduction.ipynb
+++ b/learning/courses/Quantum-machine-learning/Introduction.ipynb
@@ -20,6 +20,8 @@
     }
    },
    "source": [
+    "{/* cspell:ignore webkitallowfullscreen quantumly Ewin Yunchao Srinivasan Arunachalam Kristan */}\n",
+    "\n",
     "# Introduction to Quantum Machine Learning\n",
     "\n",
     "## Overview and motivation\n",
@@ -353,7 +355,6 @@
  ],
  "metadata": {
   "description": "An introduction to quantum machine learning that sets expectations, describes the course structure, and gives an initial example.",
-  "title": "Introduction",
   "kernelspec": {
    "display_name": "test_env",
    "language": "python",
@@ -370,7 +371,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  }
+  },
+  "title": "Introduction"
  },
  "nbformat": 4,
  "nbformat_minor": 4
