Fixed sp errors and added words to ignore to each file

--- a/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
+++ b/learning/courses/Quantum-machine-learning/Data-encoding.ipynb
@@ -5,7 +5,7 @@
    "id": "0210ee7c-f989-4eb0-9231-ae5deacb6091",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore backgroundcolorlinesize, imshow, minpos, nonumber, zzcircuit, zcircuit, pcircuit, zzcx, Schuld, Francesco, Petruccione, Vojtech, Adrian, Perez, Cervera, Lierta, Elies, Fuster, Jose, Latorre, Sweke, Jakob */}\n",
+    "{/* cspell:ignore backgroundcolor linesize, imshow, minpos, nonumber, zzcircuit, zcircuit, pcircuit, zzcx, Schuld, Francesco, Petruccione, Vojtech, Adrian, Perez, Cervera, Lierta, Elies, Fuster, Jose, Latorre, Sweke, Jakob, Adrián, Pérez-Salinas, Alba, Cervera-Lierta, Elies, Gil-Fuster, José */}\n",
     "\n",
     "# Data encoding\n",
     "\n",
