--- a/learning/courses/Quantum-machine-learning/Introduction.ipynb
+++ b/learning/courses/Quantum-machine-learning/Introduction.ipynb
@@ -20,7 +20,7 @@
     }
    },
    "source": [
-    "{/* cspell:ignore webkitallowfullscreen quantumly Ewin Yunchao Srinivasan Arunachalam Kristan */}\n",
+    "{/* cspell:ignore webkitallowfullscreen allowfullscreen quantumly Ewin Yunchao Srinivasan Arunachalam Kristan */}\n",
     "\n",
     "# Introduction to Quantum Machine Learning\n",
     "\n",
