--- a/learning/courses/Quantum-machine-learning/Classical-ML-review.ipynb
+++ b/learning/courses/Quantum-machine-learning/Classical-ML-review.ipynb
@@ -5,7 +5,7 @@
    "id": "8edaa485-a3f1-4c9f-802a-339b59920b40",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore QRAM autoencoders Perez Barto Mehryar Mohri Afshin Rostamizadeh Ameet Talwalkar */}\n",
+    "{/* cspell:ignore QRAM autoencoders Perez Barto Mehryar Mohri Afshin Rostamizadeh Ameet Talwalkar Pérez*/}\n",
     "\n",
     "# Review of relevant machine learning methods\n",
     "\n",
