--- a/learning/courses/Quantum-machine-learning/index.mdx
+++ b/learning/courses/Quantum-machine-learning/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: Overview
-description: TODO - SEO description between 50-160 characters. More More more.
+description: An introduction to quantum machine learning (QML), data encoding, kernel methods and variational quantum circuits.
 ---
 
 # Overview
 
-TODO: Describe your course here. Is this enough text for this line?
+This course explores how quantum computing can play an exciting role in machine learning. The course will offer some review of classical machine learning approaches, but will also assume some familiarity with these methods. The primary focus will be how quantum computing can fit into existing machine learning workflows. Topics include data encoding, quantum kernels, and variational quantum circuits.
