--- a/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
+++ b/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
@@ -210,7 +210,7 @@
  "metadata": {
   "description": "A brief review of classical machine learning methods relevant to QML, including kernel methods and neural networks.",
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3"
   },
   "title": "Classical ML review"
  },
