--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -356,7 +356,7 @@
  "metadata": {
   "description": "An introduction to quantum machine learning that sets expectations, describes the course structure, and gives an initial example.",
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3"
   },
   "title": "Introduction"
  },
